--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    background-color: blanchedalmond;
+    color: white;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    -webkit-text-stroke: 1px black;
+}
 h1 {
     background-color: blanchedalmond;
 }
