--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     -webkit-text-stroke: 1px black;
 }
-h1 {
-    background-color: blanchedalmond;
+div {
+    width: 300px;
+    border: 15px  Solid white;
+    padding: 50px;
+    margin: 20px;
+    
 }
